// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer should expand and close correctly 1`] = `
<body>
  <div />
  <div
    aria-hidden="false"
    class="Drawer Drawer--isShownAndClosed"
    role="group"
  >
    <header
      class="Drawer__head"
      role="button"
      tabindex="-1"
    >
      <span
        class="Drawer__headTitle"
        title="some title"
      >
        some title
      </span>
      <div
        class="Drawer__headButtons"
      >
        <button
          class="Drawer__expandButton"
          type="button"
        >
          <svg
            class="Drawer__expandIcon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 217.9L383 345c9.4 9.4 24.6 9.4 33.9 0 9.4-9.4 9.3-24.6 0-34L273 167c-9.1-9.1-23.7-9.3-33.1-.7L95 310.9c-4.7 4.7-7 10.9-7 17s2.3 12.3 7 17c9.4 9.4 24.6 9.4 33.9 0l127.1-127z"
            />
          </svg>
        </button>
      </div>
    </header>
    <section
      aria-hidden="true"
      class="Drawer__body"
    >
      some text
    </section>
  </div>
</body>
`;

exports[`Drawer should pass initial expand status 1`] = `
<body>
  <div />
  <div
    aria-hidden="false"
    class="Drawer Drawer--isShownAndExpanded"
    role="group"
  >
    <header
      class="Drawer__head"
      role="button"
      tabindex="-1"
    >
      <span
        class="Drawer__headTitle"
        title="some title"
      >
        some title
      </span>
      <div
        class="Drawer__headButtons"
      >
        <button
          class="Drawer__expandButton Drawer__expandButton--isExpanded"
          type="button"
        >
          <svg
            class="Drawer__expandIcon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 217.9L383 345c9.4 9.4 24.6 9.4 33.9 0 9.4-9.4 9.3-24.6 0-34L273 167c-9.1-9.1-23.7-9.3-33.1-.7L95 310.9c-4.7 4.7-7 10.9-7 17s2.3 12.3 7 17c9.4 9.4 24.6 9.4 33.9 0l127.1-127z"
            />
          </svg>
        </button>
      </div>
    </header>
    <section
      aria-hidden="false"
      class="Drawer__body"
    >
      some text
    </section>
  </div>
</body>
`;

exports[`Drawer should render correctly 1`] = `
<body>
  <div />
  <div
    aria-hidden="false"
    class="Drawer Drawer--isShownAndClosed"
    role="group"
  >
    <header
      class="Drawer__head"
      role="button"
      tabindex="-1"
    >
      <span
        class="Drawer__headTitle"
        title="some title"
      >
        some title
      </span>
      <div
        class="Drawer__headButtons"
      >
        <button
          class="Drawer__expandButton"
          type="button"
        >
          <svg
            class="Drawer__expandIcon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 217.9L383 345c9.4 9.4 24.6 9.4 33.9 0 9.4-9.4 9.3-24.6 0-34L273 167c-9.1-9.1-23.7-9.3-33.1-.7L95 310.9c-4.7 4.7-7 10.9-7 17s2.3 12.3 7 17c9.4 9.4 24.6 9.4 33.9 0l127.1-127z"
            />
          </svg>
        </button>
      </div>
    </header>
    <section
      aria-hidden="true"
      class="Drawer__body"
    >
      some text
    </section>
  </div>
</body>
`;
